chore: update operatorID and migrations
